# OF-Engine

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTORS.md  CONTRIBUTORS.txt  COPYING.md  COPYING.txt  INSTALL.md  INSTALL.txt  MASTER.sh  README.md  README.txt  intensity_client.bat  intensity_client.command  intensity_client.py  intensity_client.sh  intensity_master.bat  intensity_master.command  intensity_server.bat  intensity_server.command  intensity_server.py  intensity_server.sh  octaforge.sh  repl.oct  replutil.c  run.lua  run_client.bat  run_client.command  run_client.sh  run_server.bat  run_server.command  run_server.sh
src/: CMakeLists.txt  Makefile  check_enet.sh  file.diff  history.txt  readme_sauerbraten.txt  readme_source.txt  readme_tesseract.txt
src/client/: CMakeLists.txt
src/core/engine/: bih.hh  blend.cc  client.cc  client.cpp  command.cc  dynlight.cc  engine.hh  grass.cpp  lensflare.hh  light.cc  lightning.hh  main.cc  master.cpp  material.cpp  movie.cc  normal.cc  octa.cc  octa.cpp  physics.cc  pvs.cc  rendergl.cc  rendergl.cpp  renderlights.cc  renderlights.cpp  rendermodel.cc  renderparticles.cc  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cc  renderva.cpp  shader.cc  sound.cc  sound.cpp  stain.cc  texture.cc  vertmodel.hh  water.cpp  worldio.cc  worldio.cpp
src/core/game/: game.h  server.cpp
src/core/gui/: core.hh  gui.hh
src/core/octaforge/: of_logger.cpp  of_lua.cpp
src/core/shared/: command.h  crypto.cc  crypto.h  cube.h  cube.hh  geom.h  glemu.cc  tools.cc  tools.cpp
src/cubecreate/: luabind_base.hpp  luabind_blend.hpp  luabind_camera.hpp  luabind_edit.hpp  luabind_entity.hpp  luabind_gui.hpp  luabind_input.hpp  luabind_messages.hpp  luabind_model.hpp  luabind_network.hpp  luabind_parthud.hpp  luabind_shaders.hpp  luabind_sound.hpp  luabind_tex.hpp  luabind_textedit.hpp  luabind_world.hpp  scripting_system_lua.cpp  scripting_system_lua.hpp  scripting_system_lua_def.hpp  scripting_system_lua_exp.hpp  variable_system.cpp  variable_system.hpp  variable_system_def.hpp  variable_system_proto.hpp
src/enet/: CMakeLists.txt  README.txt  check_cflags.sh  protocol.c
src/engine/: 3dgui.cpp  aa.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  blob.cpp  client.cpp  command.cpp  console.cpp  decal.cpp  depthfx.h  dynlight.cpp  engine.h  explosion.h  glare.cpp  grass.cpp  hitzone.h  iqm.h  lensflare.h  light.cpp  light.h  lightmap.cpp  lightmap.h  lightning.h  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  (+30 more)
src/fpsgame/: client.cpp  entities.cpp  extinfo.h  fps.cpp  game.h  render.cpp  scoreboard.cpp  server.cpp
src/game/: client.cpp  entities.cpp  game.cpp  game.h  render.cpp  server.cpp
src/include/: wuuid.h
src/intensity/: NPC.cpp  NPC.h  asset.cpp  character_render.cpp  character_render.h  client_engine_additions.cpp  client_engine_additions.h  client_system.cpp  client_system.h  editing_system.cpp  editing_system.h  engine_additions.cpp  engine_additions.h  fpsclient_interface.cpp  fpsclient_interface.h  fpsserver_interface.cpp  fpsserver_interface.h  intensity.h  intensity_asset.cpp  intensity_asset.h  intensity_gui.cpp  intensity_physics.cpp  intensity_physics.h  intensity_physics_sauer.cpp  intensity_physics_sauer.h  intensity_texture.cpp  logging.cpp  logging.h  master.cpp  message_system.cpp  message_system.h  messages.cpp  messages.h  messages.template  messages_boost.cpp  network_system.cpp  network_system.h  network_system__unittest.cpp  python_wrap.cpp  server_system.cpp  (+12 more)
src/lib/src/: README
src/libraries/: CMakeLists.txt
src/libraries/OFTL/: CHANGELOG.txt  COPYING.txt  README.txt
src/libraries/enet/: CMakeLists.txt
src/libraries/lua/: CMakeLists.txt  README.txt
src/lua/: init.lua  logger.lua
src/lua/base/: base_actions.lua  base_animatable.lua  base_appman.lua  base_blend.lua  base_camera.lua  base_character.lua  base_colors.lua  base_console.lua  base_effects.lua  base_engine.lua  base_ent.lua  base_ent_anim.lua  base_ent_classes.lua  base_ent_static.lua  base_ent_store.lua  base_evars.lua  base_gui.lua  base_json.lua  base_library.lua  base_logent.lua  base_logent_classes.lua  base_logent_store.lua  base_logging.lua  base_messages.lua  base_models.lua  base_msgsys.lua  base_network.lua  base_platform.lua  base_shaders.lua  base_signals.lua  base_sound.lua  base_statent.lua  base_svars.lua  base_textures.lua  base_utility.lua  base_utils.lua  init.lua  (+3 more)
src/octaforge/: of_eapi.cpp  of_entities.cpp  of_entities.h  of_lapi.cpp  of_lapi.h  of_lapi_base.h  of_lapi_blend.h  of_lapi_camera.h  of_lapi_edit.h  of_lapi_entity.h  of_lapi_gui.h  of_lapi_input.h  of_lapi_messages.h  of_lapi_model.h  of_lapi_network.h  of_lapi_parthud.h  of_lapi_shaders.h  of_lapi_sound.h  of_lapi_tex.h  of_lapi_textedit.h  of_lapi_world.h  of_localserver.cpp  of_localserver.h  of_logger.cpp  of_logger.h  of_lua.cpp  of_lua.h  of_lua_api.h  of_lua_base.h  of_lua_blend.h  of_lua_camera.h  of_lua_definitions.h  of_lua_edit.h  of_lua_entity.h  of_lua_gui.h  of_lua_input.h  of_lua_messages.h  of_lua_model.h  of_lua_network.h  of_lua_parthud.h  (+11 more)
src/octastd/: run_tests.py
src/ofstdlib/: README.txt  of_algorithm.h  of_list.h  of_map.h  of_new.h  of_pair.h  of_set.h  of_shared_ptr.cpp  of_shared_ptr.h  of_stack.h  of_stdio.cpp  of_stdio.h  of_stdlib.h  of_string.cpp  of_string.h  of_traits.h  of_tree_node.h  of_utils.h  of_vector.h
src/ostd/: README.md
src/platform_osx/: macutils.mm
src/server/: CMakeLists.txt
src/shared/: arch_detection.h  client_amalg.cpp  command.h  crypto.cpp  cube.h  cube2font.c  ents.h  geom.cpp  geom.h  glemu.cpp  glemu.h  glexts.h  iengine.h  igame.h  server_amalg.cpp  stream.cpp  tessfont.c  tools.cpp  tools.h  zip.cpp
src/tools/: generate_messages.py  mingw32-toolchain.cmake  scripting_system_bind_gen.sh
src/vcpp/: mingw.rc  octaforge.cbp  octaforge.rc  octaforge.sln  octaforge.vcxproj  octaforge.vcxproj.filters
src/xcode/: macutils.m  octaforge.icns  octaforge.plist
(+681 files in other folders)
